[package]
name = "dll_injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop"] }

[dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
]